Changelog
=========

6.0.dev0 - (unreleased)
-----------------------
* Improve: Update text for closed registration case in meeting view.
  [GhitaB #97529]

5.9 - (2018-11-26)
------------------
* Improve: Add captcha field in meeting register form.
  Manual step: activate Captcha widget 1.0.3.
  [GhitaB #99957]

5.8 - (2018-11-26)
------------------
* Improve: Get rid of Google reCAPTCHA.
  Manual step: deactivate recaptcha add-ons before deploy.
  [GhitaB #99944]

5.7 - (2018-11-21)
------------------
* Improve: add 'E-pass is required' field to meeting schema. Add allow From, To
  fields to meeting schema.
  [GhitaB #99956]
* Improve: Update text on registration sent. Change text label for Role field
  and define its possible values. Get rid of Visa and Reimbursed fields.
  Update form (texts, styles), add disclaimer. Add script for deleting old
  subscribers data. Prefill meeting registration form with account existing
  details. Update titles and descriptions for all forms that are using fields
  related to meeting registration. Adapt meeting signup to new added fields.
  Update subscriber view template to include new fields and updated texts.
  [GhitaB #99957]
* Improve: Subscribers list - add excel.js customization. Update Subscribers
  table. Add new columns for new fields values, make table optional columns
  for E-pass related fields.
  [GhitaB #99958]

5.6 - (2018-11-06)
------------------
* Subscribers view - multiple changes                                     (WIP)
  [GhitaB #99958]
* Meeting view - multiple changes                                         (WIP)
  [GhitaB #99955]
* Meeting edit - multiple changes                                         (WIP)
  [GhitaB #99956]
* Fix: user profiles for 'Energy, Utilities and Industrial Infrastructure'
  value in thematic_domain. Rename key in vocabulary for this term, too.
  [GhitaB #99886]
* Feature: add FilesLibraryItem content type.                             (WIP)
  [GhitaB #99875]