@@ -1,0 +1,2 @@
+<div class="simplified-template-footer">
+</div>
