@@ -1,0 +1,13 @@
+<link rel="shortcut icon" type="image/x-icon" href="./favicon.ico" />
+
+<title>Copernicus</title>
+<meta name="description" content="Land Copernicus">
+<meta name="author" content="Land Copernicus">
+
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+
+<script type="text/javascript">
+document.write("<base href='http://" + document.location.host + "' />");
+</script>
