@@ -1,0 +1,22 @@
+<div class="simplified-template-header"
+     xmlns:i18n="http://www.w3.org/1999/xhtml"
+     metal:use-macro="context/main_template/macros/master">
+
+    <base tal:attributes="href python: view.theme_base()" />
+
+    <div id="portal-top" class="row" i18n:domain="plone" >
+        <div class="cell width-full position-0">
+             <div tal:replace="structure provider:plone.portaltop" ></div>
+        </div>
+    </div>
+
+    <div id="portal-columns" class="row"  >
+         <div id="portal-column-content" class="cell"></div>
+         <metal:block fill-slot="content"></metal:block>
+
+         <div id="portal-column-one" class="cell">
+             <metal:portlets fill-slot="portlets_one_slot"></metal:portlets>
+         </div>
+    </div>
+
+</div>
