@@ -3,6 +3,8 @@ Changelog
 
 6.0.dev0 - (unreleased)
 -----------------------
+* Feature: Added external templates for land.copernicus search
+  [iulianpetchesi #99788]
 * Improve: Update text for closed registration case in meeting view.
   [GhitaB #97529]
 
@@ -437,4 +439,3 @@ Changelog
 1.0  - (initial release)
 ------------------------
 * Initial release
-
